@@ -1,6 +1,7 @@
 dbus (1.2.24-3) UNRELEASED; urgency=low
 
   * Add patch from upstream to fix segfaults when reloaded on kFreeBSD
+  * Work around FTBFS if dh-buildinfo is installed (Closes: #590594)
 
  -- Simon McVittie <smcv@debian.org>  Tue, 27 Jul 2010 19:10:16 +0100
 
